# FlashBit

./: .ghci  .gitignore  BACKLOG.md  FlashBit.cabal  LICENSE  Makefile  README.md  TODO.md  cabal.config  demo.hs
assets/: cat.torrent
cli/: Console.hs  Main.hs  Version.hs
demo/: count.hs  musicans.hs  peer.hs
specs/: BCodeSpec.hs  Main.hs
specs/Data/: PieceHistogramSpec.hs
specs/Protocol/: PeerSpec.hs
src/: BCode.hs  BCodeAccess.hs  BCodeTorrent.hs  BCodeTracker.hs  Choke.hs  Digest.hs  FS.hs  Peer.hs  PeerProtocol.hs  Piece.hs  Process.hs  ProcessGroup.hs  Protocol.hs  Rate.hs  Server.hs  Supervisor.hs  Supervisor2.hs  Supervisor3.hs  Timer.hs  Torrent.hs  URI.hs  Version.hs
src/Control/Concurrent/: Timer.hs
src/Data/: PieceHistogram.hs  PieceSet.hs  Queue.hs  Rate.hs
src/FlashBit/: API.hs  ChokeManager.hs  Config.hs  Console.hs  FileAgent.hs  Listen.hs  Peer.hs  PeerDatabase.hs  PeerManager.hs  PieceManager.hs  TorrentDatabase.hs  TorrentManager.hs  TorrentThreadDatabase.hs  Tracker.hs
src/FlashBit/Peer/: Common.hs  Handler.hs  Main.hs  Receiver.hs  Sender.hs
src/FlashBit/Peer/Handler/: State.hs
src/FlashBit/Peer/Main/: State.hs
src/FlashBit/Peer/Sender/: State.hs
src/FlashBit/PeerManager/: Chan.hs  State.hs
src/FlashBit/PieceManager/: Chan.hs  State.hs
src/FlashBit/TorrentManager/: Chan.hs
src/FlashBit/Tracker/: Chan.hs  State.hs
src/Network/URI/: Extra.hs
src/Platform/: Process.hs  Server.hs  Supervisor.hs
src/Process/: Channel.hs  ChokeManager.hs  Console.hs  FileAgent.hs  Listen.hs  Peer.hs  PeerChan.hs  PeerManager.hs  PieceManager.hs  Status.hs  TorrentManager.hs  Tracker.hs
src/Process/Peer/: Chan.hs  Handler.hs  Receiver.hs  Sender.hs  SenderQ.hs  SenderQueue.hs  Supervisor.hs
src/Protocol/: Peer.hs  Types.hs
src/Torrent/: Announce.hs  BCode.hs  Exception.hs  File.hs  Message.hs  Metafile.hs  Peer.hs  Piece.hs  Torrent.hs  Tracker.hs
src/Torrent/BCode/: BCode.hs  TorrentFile.hs  TrackerResponse.hs
tests/: Main.hs  TestData.hs
tests/Data/PieceSet/: Test.hs
tests/Data/Queue/: Test.hs
tests/Data/Rate/: Test.hs
tests/Network/URI/Extra/: Test.hs
tests/Rate/: Test.hs
tests/State/PeerManager/: Test.hs
tests/TestData/: MultiTorrent.hs  SingleTorrent.hs
tests/Torrent/: Test.hs
tests/Torrent/Announce/: Test.hs
tests/Torrent/BCode/: Test.hs
tests/Torrent/File/: Test.hs
tests/Torrent/Message/: Test.hs
tests/Torrent/Metafile/: Test.hs
tests/Torrent/Tracker/: Test.hs
tests/URI/: Test.hs
tests/_data/: cat.torrent  kitten.torrent  tracker.bencode
